--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@elysiajs/cors": "^1.4.0",
     "@prisma/client": "^6.18.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.3",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.8.0",
     "elysia": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
+    "path": "^0.12.7",
     "prisma": "^6.18.0",
     "zod": "^4.1.12"
   },
