--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.0",
-    "@prisma/client": "^6.18.0",
+    "@prisma/adapter-pg": "^7.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.3",
+    "@types/pg": "^8.15.6",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.8.0",
     "elysia": "^1.2.0",
@@ -23,13 +24,15 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "path": "^0.12.7",
-    "prisma": "^6.18.0",
+    "pg": "^8.16.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "bun-types": "^1.2.0",
-    "typescript": "^5.7.2",
+    "@prisma/client": "6",
     "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10"
+    "@types/jsonwebtoken": "^9.0.10",
+    "bun-types": "^1.2.0",
+    "prisma": "6",
+    "typescript": "^5.7.2"
   }
 }
